--- a/3.2/Jenkinsfile
+++ b/3.2/Jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
    post {
       success {
          archiveArtifacts 'test-results.txt'
-         slackSend channel: '#pipelinesdemo',
+         slackSend channel: '#builds',
                    message: "Release ${env.RELEASE}, success: ${currentBuild.fullDisplayName}."
       }
    }
