--- a/m3/demo1/1.1/Jenkinsfile
+++ b/m3/demo1/1.1/Jenkinsfile
@@ -3,6 +3,7 @@ pipeline {
     environment {
         VERSION = "0.1.0"        
         VERSION_RC = "rc.2"
+	HOME = '/tmp'
     }
     stages {
         stage('Audit tools') {                        
